[gd_scene load_steps=4 format=3 uid="uid://2nqpmv02h2ib"]

[ext_resource type="Script" path="res://scripts/animated_button.gd" id="1_fg5ul"]
[ext_resource type="Script" path="res://scripts/levels/main_menu.gd" id="1_qfm38"]
[ext_resource type="AudioStream" uid="uid://brxu32wgtne0k" path="res://sfx/select.wav" id="3_fwfio"]

[node name="MainMenu" type="Node"]
script = ExtResource("1_qfm38")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_top = 64.0
offset_right = 640.0
offset_bottom = 104.0
bbcode_enabled = true
text = "[center][b]Scales to Scale[/b][/center]"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -145.0
offset_top = -50.5
offset_right = 145.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="StartButton" type="Button" parent="VBoxContainer" node_paths=PackedStringArray("focus_player")]
unique_name_in_owner = true
layout_mode = 2
text = "Start Game"
script = ExtResource("1_fg5ul")
focus_player = NodePath("../../ButtonFocusPlayer")

[node name="LevelButton" type="Button" parent="VBoxContainer" node_paths=PackedStringArray("focus_player")]
unique_name_in_owner = true
layout_mode = 2
text = "Level Select"
script = ExtResource("1_fg5ul")
focus_player = NodePath("../../ButtonFocusPlayer")

[node name="QuitButton" type="Button" parent="VBoxContainer" node_paths=PackedStringArray("focus_player")]
unique_name_in_owner = true
layout_mode = 2
text = "Exit Game"
script = ExtResource("1_fg5ul")
focus_player = NodePath("../../ButtonFocusPlayer")

[node name="ButtonFocusPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_fwfio")
